--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     }
 
     img.responsive-img {
-      max-width: 100%;
+      max-width: 100px;
       height: auto;
       display: block;
       border-radius: 20px;
